--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <script defer src="game.js" > </script>
 </head>
 <body>
-  <script src="game.js"> </script>
+  <button id="rock"> Rock </button>
+  <button id="paper"> Paper </button>
+  <button id="scissors"> Scissors </button> 
 </body>
 </html>
