--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
   <button id="rock"> Rock </button>
   <button id="paper"> Paper </button>
-  <button id="scissors"> Scissors </button> 
+  <button id="scissors"> Scissors </button>
+  <hr>
+  <div id="display"> </div>
 </body>
 </html>
